--- a/.gitignore
+++ b/.gitignore
@@ -370,11 +370,11 @@ android/pytorch_android_torchvision/.cxx
 .stable_pyre_client
 .pyre_client
 
-./checkpoints
-./data
-./output
-./runs
-./wandb
-./__pycache__
+checkpoints/
+data/
+output/
+runs/
+wandb/
+__pycache__/
 *.csv
 *.png
